# DevIA-P4-Requeter-des-services-IA

./: Exemple_Viz_segmentation_dataset.ipynb  README.md  huggingface_api_cloth_seg.ipynb  main.py  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.py
